# dim-go2-dash

./: README.md
dim/apps/go2_dash/: .gitignore  app.json  app.yaml  go2_control.py  go2_helper.py  index.html  main.js
dim/apps/go2_dash/frontend/: index.html
dim/apps/go2_dash/go2_helper_rs/: Cargo.toml  flake.nix
dim/apps/go2_dash/go2_helper_rs/src/: arp.rs  ble.rs  discovery.rs  lan.rs  main.rs  protocol.rs
