[package]
name = "go2_helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "go2_helper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "time", "sync", "net", "process", "fs"] }
btleplug = "0.12"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.8"
cfb-mode = "0.8"
socket2 = { version = "0.5", features = ["all"] }
if-addrs = "0.13"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
